--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
         minSdkVersion 21
         targetSdk 34
 
-        versionCode 105
+        versionCode 113
 
-        versionName "6.1.9"
+        versionName "6.2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -21,6 +21,12 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    bundle {
+        language {
+            enableSplit = false
         }
     }
     compileOptions {
