--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 21
         targetSdk 34
 
-        versionCode 120
+        versionCode 121
 
         versionName "6.2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -45,6 +45,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.google.android.gms:play-services-ads:20.5.0'
     implementation 'androidx.core:core-animation:1.0.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     //implementation 'androidx.lifecycle:lifecycle-process:2.5.1'
     //implementation 'androidx.lifecycle:lifecycle-process:2.5.1'
     testImplementation 'junit:junit:4.+'
