--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -31,9 +31,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Trivia"
         android:usesCleartextTraffic="true"
-        tools:targetApi="m">
+        tools:targetApi="m" >
         <activity
-            android:name=".GameActivity3"
+            android:name=".alpha.activity.ProgressActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".alpha.activity.GameActivity3"
             android:exported="false" />
         <activity
             android:name=".WebviewActivity"
@@ -78,7 +81,7 @@
         <activity android:name=".CountryLeaderBoard" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -103,7 +106,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
