--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 android {
     compileSdk 34
@@ -10,9 +11,9 @@ android {
         minSdkVersion 21
         targetSdk 34
 
-        versionCode 134
+        versionCode 135
 
-        versionName "6.2.3"
+        versionName "6.2.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -37,6 +38,11 @@ android {
 }
 
 dependencies {
+
+    implementation "androidx.room:room-runtime:2.6.1"
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    annotationProcessor "androidx.room:room-compiler:2.6.1"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
