--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,24 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.devtools.ksp'
+//    id 'androidx.room'
 }
 android {
     compileSdk 34
-// buildToolsVersion "30.0.3"
+    // buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.digitalDreams.millionaire_game"
         minSdkVersion 21
         targetSdk 34
 
-        versionCode 135
+        versionCode 137
 
-        versionName "6.2.4"
+        versionName "6.2.6"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
 
     buildTypes {
         release {
@@ -30,19 +33,31 @@ android {
             enableSplit = false
         }
     }
+
+    ksp{
+        arg('room.schemaLocation', "$projectDir/schemas")
+    }
+     viewBinding{
+         enabled = true
+     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     namespace 'com.digitalDreams.millionaire_game'
 }
 
 dependencies {
 
-    implementation "androidx.room:room-runtime:2.6.1"
+    //kotlin testing
+    implementation 'androidx.room:room-runtime:2.6.1'
+    ksp 'androidx.room:room-compiler:2.6.1'
+    implementation 'androidx.room:room-ktx:2.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-    annotationProcessor "androidx.room:room-compiler:2.6.1"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+    implementation 'com.google.code.gson:gson:2.10'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
@@ -62,9 +77,7 @@ dependencies {
     // annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.3.1"
     def lifecycle_version = "2.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-runtime:2.4.1"
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.4.1"
-    // implementation 'androidx.work:work-runtime-ktx:2.7.0-alpha05'
-    //implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.7.0"
     implementation 'org.conscrypt:conscrypt-android:2.5.1'
 }
