--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,11 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.google.devtools.ksp" version "2.0.0-Beta3-1.0.17" apply false
+}
+
+
 allprojects {
     repositories {
         google()
